start work on regression model

--- a/HDDM/Within_models_trial.ipynb
+++ b/HDDM/Within_models_trial.ipynb
@@ -23,19 +23,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Notebook is running: /opt/conda/bin/python\n",
-      "The current HDDM version is 3.7.6\n",
+      "Notebook is running: /home/hcp4715/miniconda3/envs/hddm/bin/python\n",
+      "The current HDDM version is 3.7.7\n",
       "The current HDDM version is 0.8.0\n",
-      "The current IPython version is 7.15.0\n",
-      "The current Numpy version is 1.19.1\n",
-      "The current Pandas version is 1.0.5\n"
+      "The current IPython version is 7.13.0\n",
+      "The current Numpy version is 1.18.5\n",
+      "The current Pandas version is 1.0.4\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.7/site-packages/IPython/parallel.py:13: ShimWarning: The `IPython.parallel` package has been deprecated since IPython 4.0. You should import from ipyparallel instead.\n",
+      "/home/hcp4715/miniconda3/envs/hddm/lib/python3.7/site-packages/IPython/parallel.py:13: ShimWarning: The `IPython.parallel` package has been deprecated since IPython 4.0. You should import from ipyparallel instead.\n",
       "  \"You should import from ipyparallel instead.\", ShimWarning)\n"
      ]
     }
@@ -1998,7 +1998,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
